--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.90.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "license": "Apache-2.0"
 }
